--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             <li><a href="#">Terms</a></li>
           </ul>
         </div>
-        <p>Copyright &copy; Design by <a href="http://www.themefisher.com">Themefisher</a>. Developed by <a href="http://erino2oo.com">Erin O'Toole</a>All rights reserved.</p>
+        <p>Copyright &copy; Design by <a href="http://www.themefisher.com">Themefisher</a>. Developed by <a href="http://erino2oo.com">Erin O'Toole</a>. All rights reserved.</p>
       </div>
     </div>
   </div>
