--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
       <div class="col-md-12">
         <div class="footer-manu">
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="{{ site.baseurl }}/contact">Contact us</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+            <li><a href="{{ site.baseurl }}">About Us</a></li>
+            <li><a href="{{ site.baseurl }}/work">Portfolio</a></li>
+            <li><a href="{{ site.baseurl }}/blog">Our Team</a></li>
+            <li><a href="{{ site.baseurl }}/contact">Contact Us</a></li>
             <li><a href="#">Terms</a></li>
           </ul>
         </div>
