--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <ul>
             <li><a href="{{ site.baseurl }}">About Us</a></li>
             <li><a href="{{ site.baseurl }}/work">Portfolio</a></li>
-            <li><a href="{{ site.baseurl }}/blog">Our Team</a></li>
+            <li><a href="{{ site.baseurl }}/team">Our Team</a></li>
             <li><a href="{{ site.baseurl }}/contact">Contact Us</a></li>
             <li><a href="#">Terms</a></li>
           </ul>
