--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
                 <li><a href="{{ site.baseurl }}/work">Portfolio</a></li>
-                <li><a href="{{ site.baseurl }}/blog">Our Team</a></li>
+                <li><a href="{{ site.baseurl }}/team">Our Team</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
