--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,3 @@
-<!-- footer Start -->
 <footer>
   <div class="container">
     <div class="row">
@@ -11,7 +10,7 @@
             <li><a href="{{ site.baseurl }}/contact">Contact Us</a></li>
           </ul>
         </div>
-        <p>Copyright &copy; Design by <a href="http://www.themefisher.com">Themefisher</a>. Developed by <a href="http://erino2oo.com">Erin O'Toole</a>. All rights reserved.</p>
+        <p>Copyright &copy; {{ site.time | date: '%Y' }} Developed by <a href="http://erino2oo.com">Erin O'Toole</a>. All rights reserved.</p>
       </div>
     </div>
   </div>
