--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html class="no-js">
-  <head>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" <![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
-    {% include head.html %}
+{% include head.html %}
 
-  </head>
-  <body>
+<body>
 
+   {% include header.html %}
 
-    {% include header.html %}
+   <div class="content">
+      <div class="container">
+         {{ content }}
+      </div>
+   </div><!-- end .content -->
 
+   {% include footer.html %}
+   {% include scripts.html %}
 
-    {{ content }}
+</body>
 
-
-
-
-
-
-
-
-
-    {% include footer.html %}
-
-    </body>
 </html>
