--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
+<!-- footer Start -->
 <footer>
   <div class="container">
     <div class="row">
+      <div class="col-md-12">
+        <div class="footer-manu">
           <ul>
             <li><a href="{{ site.baseurl }}">About Us</a></li>
             <li><a href="{{ site.baseurl }}/work">Portfolio</a></li>
@@ -8,6 +11,8 @@
             <li><a href="{{ site.baseurl }}/contact">Contact Us</a></li>
           </ul>
         </div>
-        <p>Copyright &copy; {{ site.time | date: '%Y' }} Developed by <a href="http://erino2oo.com">Erin O'Toole</a>. All rights reserved.</p>
+        <p>Copyright &copy; Design by <a href="http://www.themefisher.com">Themefisher</a>. Developed by <a href="http://erino2oo.com">Erin O'Toole</a>. All rights reserved.</p>
       </div>
+    </div>
+  </div>
 </footer>
