--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -4,6 +4,7 @@ COLOR VARIABLES
 
 // Better default colors
 // Cool
+$bluue: #2b60b5;
 $aqua:  #7FDBFF;
 $blue:  #0074D9;
 $navy:  #001F3F;
@@ -25,11 +26,11 @@ $grey:   #aaa;
 $black:  #111;
 
 // Color variables
-$primary-color: seagreen;
-$secondary-color: #233E5B;
+$primary-color: #2b60b5;
+$secondary-color: #3b3c3d;
 $tertiary-color: #aaa;
 $link-color: $primary-color;
-$background-color: seagreen;
+$background-color: #2b60b5;
 
 $bad-color: $red; // Bad color for errors, validation etc.
 $good-color: $green; // Good color for success etc.
@@ -44,7 +45,7 @@ CONSISTENT SETTINGS
 
 $br: 5px; // Border-radius
 $btn-br: 5px; // Button border-radius
-$padding: 40px; // Padding and margins
+$padding: 35px; // Padding and margins
 $line-height: 44px; // Consistent height for buttons, inputs etc.
 
 
@@ -52,5 +53,5 @@ $line-height: 44px; // Consistent height for buttons, inputs etc.
 TYPE SETTINGS
 ***************/
 
-$sans-serif: "Open Sans", Helvetica, Arial, sans-serif;
+$sans-serif: "Catamaran", sans-serif;
 $serif: "PT Serif", Georgia, Times, serif;
