--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer>
   <div class="container">
     <div class="row">
+      <div class="footer manu">
           <ul>
             <li><a href="{{ site.baseurl }}">About Us</a></li>
             <li><a href="{{ site.baseurl }}/work">Portfolio</a></li>
@@ -10,4 +11,5 @@
         </div>
         <p>Copyright &copy; {{ site.time | date: '%Y' }} Developed by <a href="http://erino2oo.com">Erin O'Toole</a>. All rights reserved.</p>
       </div>
+    </div>
 </footer>
