--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,7 @@
 
 // Import fonts from Google
 @import url('https://fonts.googleapis.com/css?family=Catamaran');
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
 @import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
 
