--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,11 +201,11 @@ footer .footer-manu ul li a:hover {
 .postNav .next span{right:0}
 .footer{text-align:center;padding:2rem 0}
 .footer .container{border-top:4px solid #d9d9d9;padding-top:.5em;max-width:90%;margin-left:auto;margin-right:auto}
-.footer .container:after{content:" ";display:block;clear:both}
+.footer .container:after{content:" ";display:inline;clear:both}
 .footer .copy,.footer .footer-links{font-size:.8em}
 .footer .copy{margin-bottom:1rem}
 .footer-links ul{text-align:center}
-.footer-links ul li{display:inline-block}
+.footer-links ul li{display:inline}
 .footer-links ul li a{display:inline-block;width:30px;height:30px;-webkit-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out}
 .footer-links ul li a svg{display:block;width:100%;height:100%}
 .footer-links ul li a svg .outer-shape{fill:#2e8b57}
