--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-default navbar-fixed-bottom navbar-custom">
+<nav class="navbar navbar-default navbar-fixed-bottom navbar-footer-custom">
   <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="navbar-footer">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
