--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-bottom navbar-footer-custom">
+<nav class="navbar navbar-default navbar-footer-custom">
   <div class="container-fluid">
     <div class="navbar-footer">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
