--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,9 @@
         <span class="icon-bar"></span>
       </button>
       {% if site.title-img %}
-        <a class="navbar-brand navbar-brand-logo" href="www.happylifecapital.com"><img src="{{ site.title-img }}"/></a>
+        <a class="navbar-footer-brand navbar-brand-logo" href="www.happylifecapital.com"><img src="{{ site.title-img }}"/></a>
       {% else %}
-        <a class="navbar-brand" href="www.happylifecapital.com">{{ site.title }}</a>
+        <a class="navbar-footer-brand" href="www.happylifecapital.com">{{ site.title }}</a>
       {% endif %}
     </div>
 
