--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1404,7 +1404,7 @@ ol ol {
   margin-bottom: 0;
 }
 .list-unstyled {
-  padding-left: 10;
+  padding-left: 10px;
   list-style: none;
 }
 .list-inline {
